--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
-    "mongoose": "^7.3.3",
-    "nodemon": "^3.0.1"
+    "jsonwebtoken": "^9.0.1",
+    "mongoose": "^7.3.3"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "nodemon script.js"
   },
   "name": "lol",
   "version": "1.0.0",
   "main": "index.js",
-  "devDependencies": {},
+  "devDependencies": {
+    "nodemon": "^3.0.1"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
